@@ -54,47 +54,47 @@ Class42=CWavFileDlg
 Class43=CWireDlg
 
 ResourceCount=42
-Resource1=IDD_INSTRUMENT (Neutral (Default))
-Resource2=IDD_KEYCONFIG (Neutral (Default))
+Resource1=IDD_GEAR_GAINER (Neutral (Default))
+Resource2=IDD_PRESETS (Neutral (Default))
 Resource3=IDR_VSTFRAME (Neutral (Default))
 Resource4=IDR_POPUPMENU (Neutral (Default))
-Resource5=IDD_GEAR_PSYCHOSC (Neutral (Default))
-Resource6=IDD_INFO (Neutral (Default))
-Resource7=IDD_GEAR_DELAY (Neutral (Default))
-Resource8=IDD_GEARDISTORT (Neutral (Default))
-Resource9=IDD_MACPROP (Neutral (Default))
+Resource5=IDD_MIDI_LEARN
+Resource6=IDD_DIRECTORIES (Neutral (Default))
+Resource7=IDD_MASTERDLG (Neutral (Default))
+Resource8=IDD_GREETS (Neutral (Default))
+Resource9=IDD_VSTRACK (Neutral (Default))
 Resource10=IDR_WAVEFRAME (Neutral (Default))
-Resource11=IDR_MACHINEFRAME (Neutral (Default))
-Resource12=IDD_GEAR_TRACKER (Neutral (Default))
-Resource13=IDD_SKIN (Neutral (Default))
-Resource14=IDD_ENVDIALOG (Neutral (Default))
-Resource15=IDD_GEAR_FILTER (Neutral (Default))
-Resource16=IDD_GREETS (Neutral (Default))
-Resource17=IDD_SEQUENCER (Neutral (Default))
-Resource18=IDD_SONGPROP (Neutral (Default))
-Resource19=IDD_GEAR_GAINER (Neutral (Default))
-Resource20=IDD_GEAR_FLANGER (Neutral (Default))
-Resource21=IDD_MASTERDLG (Neutral (Default))
-Resource22=IDD_NEWVAL (Neutral (Default))
-Resource23=IDD_VSTRACK (Neutral (Default))
-Resource24=IDD_PRESETS (Neutral (Default))
-Resource25=IDD_MIDI_MONITOR (Neutral (Default))
-Resource26=IDD_ABOUTBOX (Neutral (Default))
-Resource27=IDD_NEWMACHINE (Neutral (Default))
-Resource28=IDD_DIRECTORIES (Neutral (Default))
-Resource29=IDD_PATDLG (Neutral (Default))
-Resource30=IDD_DSOUNDCONFIG (Neutral (Default))
-Resource31=IDD_OUTPUT (Neutral (Default))
-Resource32=IDD_SWINGFILL
-Resource33=IDD_CONFIGURATION (Neutral (Default))
-Resource34=IDD_WAVED_AMPLIFY (Neutral (Default))
-Resource35=IDD_INST_EDITOR (Neutral (Default))
-Resource36=IDD_MIDI_INPUT
-Resource37=IDD_MIDI_LEARN
-Resource38=IDD_WIREDIALOG (Neutral (Default))
-Resource39=IDD_PSYBAR (Neutral (Default))
-Resource40=IDD_PSYBAR2 (Neutral (Default))
-Resource41=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource11=IDD_MIDI_INPUT
+Resource12=IDD_KEYCONFIG (Neutral (Default))
+Resource13=IDD_MIDI_MONITOR (Neutral (Default))
+Resource14=IDD_ABOUTBOX (Neutral (Default))
+Resource15=IDD_ENVDIALOG (Neutral (Default))
+Resource16=IDD_INSTRUMENT (Neutral (Default))
+Resource17=IDD_INFO (Neutral (Default))
+Resource18=IDR_MACHINEFRAME (Neutral (Default))
+Resource19=IDD_NEWMACHINE (Neutral (Default))
+Resource20=IDD_GEAR_FILTER (Neutral (Default))
+Resource21=IDD_INST_EDITOR (Neutral (Default))
+Resource22=IDD_WAVED_AMPLIFY (Neutral (Default))
+Resource23=IDD_OUTPUT (Neutral (Default))
+Resource24=IDD_SWINGFILL
+Resource25=IDD_CONFIGURATION (Neutral (Default))
+Resource26=IDD_GEAR_PSYCHOSC (Neutral (Default))
+Resource27=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource28=IDD_PSYBAR2 (Neutral (Default))
+Resource29=IDD_SONGPROP (Neutral (Default))
+Resource30=IDD_WIREDIALOG (Neutral (Default))
+Resource31=IDD_GEAR_FLANGER (Neutral (Default))
+Resource32=IDD_SKIN (Neutral (Default))
+Resource33=IDD_NEWVAL (Neutral (Default))
+Resource34=IDD_MACPROP (Neutral (Default))
+Resource35=IDD_DSOUNDCONFIG (Neutral (Default))
+Resource36=IDD_GEAR_DELAY (Neutral (Default))
+Resource37=IDD_GEARDISTORT (Neutral (Default))
+Resource38=IDD_PSYBAR (Neutral (Default))
+Resource39=IDD_PATDLG (Neutral (Default))
+Resource40=IDD_SEQUENCER (Neutral (Default))
+Resource41=IDD_GEAR_TRACKER (Neutral (Default))
 Resource42=IDR_MAINFRAME (Neutral (Default))
 
 [CLS:CChildView]
@@ -661,7 +661,7 @@ Class=CSongpDlg
 [DLG:IDD_SWINGFILL]
 Type=1
 Class=CSwingFillDlg
-ControlCount=10
+ControlCount=12
 Control1=IDOK,button,1342242817
 Control2=IDCANCEL,button,1342242816
 Control3=IDC_STATIC,static,1342308866
@@ -672,6 +672,8 @@ Control7=IDC_VARIANCE,edit,1350631552
 Control8=IDC_WIDTH,edit,1350631552
 Control9=IDC_STATIC,static,1342308866
 Control10=IDC_PHASE,edit,1350631552
+Control11=IDC_OFFSET,button,1342242819
+Control12=IDC_STATIC,static,1342308353
 
 [DLG:IDD_WAVED_AMPLIFY]
 Type=1
@@ -1364,7 +1366,7 @@ Type=1
 Class=?
 ControlCount=32
 Control1=IDC_FOLLOW,button,1342242819
-Control2=IDC_SEQLIST,listbox,1352730627
+Control2=IDC_SEQLIST,listbox,1352730883
 Control3=IDC_INCSHORT,button,1342246784
 Control4=IDC_DECSHORT,button,1342246784
 Control5=IDC_SEQINS,button,1342242816
